k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loghawk
  labels:
    app: loghawk
